Configure AppMap for this project
AppMap is a free and open-source runtime code analysis tool.

AppMap has been installed and configured using the installation instructions at:
https://appmap.io/docs/install-appmap-agent.html using the automated
installer tool:
        npx @appland/appmap@latest install

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@apollo/server": "^4.7.1",
+    "@appland/appmap-agent-js": "^14.2.0",
     "@nestjs/apollo": "^11.0.5",
     "@nestjs/axios": "^3.0.1",
     "@nestjs/common": "^9.0.0",
