--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
   },
   "dependencies": {
     "@apollo/server": "^4.7.1",
-    "@appland/appmap-agent-js": "^14.2.0",
     "@nestjs/apollo": "^11.0.5",
     "@nestjs/axios": "^3.0.1",
     "@nestjs/common": "^9.0.0",
@@ -30,6 +29,8 @@
     "@nestjs/graphql": "^11.0.5",
     "@nestjs/jwt": "^10.0.3",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-socket.io": "^9.4.3",
+    "@nestjs/websockets": "^9.4.3",
     "@prisma/client": "^4.13.0",
     "bcrypt": "^5.1.0",
     "graphql": "^16.6.0",
