--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@nestjs/websockets": "^9.4.3",
     "@prisma/client": "^4.13.0",
     "bcrypt": "^5.1.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "graphql": "^16.6.0",
     "graphql-ws": "^5.14.3",
     "micro": "^10.0.1",
