--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
+    "dataloader": "^2.2.3",
     "graphql": "^16.6.0",
     "graphql-ws": "^5.14.3",
     "micro": "^10.0.1",
