--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "codemod:ponno": "ts-node scripts/ponnoCodemod.ts"
   },
   "dependencies": {
     "@apollo/server": "^4.11.3",
@@ -40,6 +41,9 @@
     "graphql": "^16.10.0",
     "graphql-ws": "^6.0.4",
     "micro": "^10.0.1",
+    "nestjs-pino": "^4.4.0",
+    "pino-http": "^10.4.0",
+    "pino-pretty": "^13.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
     "uuid": "^11.1.0"
@@ -66,6 +70,7 @@
     "supertest": "^7.1.0",
     "ts-jest": "29.3.1",
     "ts-loader": "^9.5.2",
+    "ts-morph": "^18.0.0",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "4.2.0",
     "typescript": "^5.8.3",
