--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,10 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "moduleResolution": "node",
+    "downlevelIteration": true,
+    "useDefineForClassFields": false,
     "target": "es2017",
     "sourceMap": true,
     "outDir": "./dist",
