--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
     "db:seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
-    "@apollo/server": "^4.11.3",
-    "@nestjs/apollo": "^13.0.4",
+    "@apollo/server": "^4.12.2",
+    "@jest/core": "^30.0.5",
+    "@nestjs/apollo": "^13.1.0",
     "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^11.0.13",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.13",
-    "@nestjs/graphql": "^13.0.4",
+    "@nestjs/graphql": "^13.1.0",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/platform-express": "^11.0.13",
     "@nestjs/platform-socket.io": "^11.0.13",
@@ -64,12 +65,12 @@
     "eslint": "^9.24.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.6",
-    "jest": "29.7.0",
+    "jest": "^30.0.5",
     "prettier": "^3.5.3",
     "prisma": "^6.6.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.1.0",
-    "ts-jest": "29.3.1",
+    "ts-jest": "^29.4.1",
     "ts-loader": "^9.5.2",
     "ts-morph": "^20.0.0",
     "ts-node": "^10.9.2",
