--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@nestjs/platform-socket.io": "^11.0.13",
     "@nestjs/websockets": "^11.0.13",
     "@prisma/client": "^6.6.0",
+    "@types/jsdom": "^21.1.7",
+    "@types/validator": "^13.15.2",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -42,13 +44,16 @@
     "dataloader": "^2.2.3",
     "graphql": "^16.10.0",
     "graphql-ws": "^6.0.4",
+    "isomorphic-dompurify": "^2.26.0",
+    "jsdom": "^26.1.0",
     "micro": "^10.0.1",
     "nestjs-pino": "^4.4.0",
     "pino-http": "^10.4.0",
     "pino-pretty": "^13.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "validator": "^13.15.15"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.6",
