--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,10 @@
 DATABASE_URL="mysql://username:password@localhost:3306/database_name"
 
 # JWT Configuration
-JWT_SECRET="your-secure-jwt-secret-key-here"
-REFRESH_TOKEN_SECRET="your-secure-refresh-token-secret-here"
-JWT_EXPIRATION="15m"
-REFRESH_TOKEN_EXPIRATION="7d"
+JWT_ACCESS_SECRET="your-secure-jwt-access-secret-32-chars-minimum"
+JWT_REFRESH_SECRET="your-secure-jwt-refresh-secret-32-chars-minimum"
+JWT_ACCESS_EXPIRATION="15m"
+JWT_REFRESH_EXPIRATION="7d"
 
 # Server Configuration
 PORT=8080
@@ -19,6 +19,10 @@ WEBHOOK_SECRET="your-linear-webhook-secret-here"
 # CORS Configuration (comma-separated list of allowed origins)
 CORS_ORIGINS="http://localhost:3000,http://localhost:3001,http://localhost:4000"
 
+# Rate Limiting Configuration
+THROTTLE_LIMIT=100         # Default API rate limit (requests per minute)
+AUTH_THROTTLE_LIMIT=10     # Auth endpoint rate limit (requests per 5 minutes)
+
 # Optional Project Configuration
 UNASSIGNED_PROJECT_ID="unassigned-project-default"
 
@@ -27,5 +31,8 @@ UNASSIGNED_PROJECT_ID="unassigned-project-default"
 # LOG_LEVEL=warn
 # PORT=8080
 # CORS_ORIGINS="https://yourdomain.com,https://app.yourdomain.com"
-# JWT_SECRET="super-secure-jwt-secret-256-bits-minimum"
+# JWT_ACCESS_SECRET="super-secure-jwt-access-secret-256-bits-minimum"
+# JWT_REFRESH_SECRET="super-secure-jwt-refresh-secret-256-bits-minimum"
+# THROTTLE_LIMIT=60
+# AUTH_THROTTLE_LIMIT=5
 # DATABASE_URL="mysql://user:pass@prod-db:3306/proddb"
