--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,14 @@ CORS_ORIGINS="http://localhost:3000,http://localhost:3001,http://localhost:4000"
 THROTTLE_LIMIT=100         # Default API rate limit (requests per minute)
 AUTH_THROTTLE_LIMIT=10     # Auth endpoint rate limit (requests per 5 minutes)
 
+# GraphQL Security Configuration
+GRAPHQL_MAX_DEPTH=10                      # Maximum query depth allowed
+GRAPHQL_MAX_COMPLEXITY=1000               # Maximum query complexity allowed
+GRAPHQL_TIMEOUT=30000                     # Query timeout in milliseconds
+GRAPHQL_INTROSPECTION=false               # Enable GraphQL introspection (disable in production)
+GRAPHQL_RATE_LIMIT_WINDOW=60000          # GraphQL rate limit window (1 minute)
+GRAPHQL_RATE_LIMIT_MAX=100               # GraphQL requests per window
+
 # Optional Project Configuration
 UNASSIGNED_PROJECT_ID="unassigned-project-default"
 
