--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "cookie-parser": "^1.4.7",
     "dataloader": "^2.2.3",
     "graphql": "^16.10.0",
+    "graphql-depth-limit": "^1.1.0",
+    "graphql-query-complexity": "^1.1.0",
     "graphql-ws": "^6.0.4",
     "isomorphic-dompurify": "^2.26.0",
     "jsdom": "^26.1.0",
@@ -63,6 +65,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.8",
     "@types/express": "^5.0.1",
+    "@types/graphql-depth-limit": "^1.1.6",
     "@types/jest": "29.5.14",
     "@types/node": "22.14.0",
     "@types/supertest": "^6.0.3",
